<resources>
    <string name="app_name">甘南头条</string>
    <string name="load_more_footer_hint">查看更多</string>
    <string name="load_more_footer_hint_ready">松开加载更多</string>
    <string name="bar_tv1">首页</string>
    <string name="bar_tv2">发布</string>
    <string name="bar_tv3">我的</string>
    <string name="bar_tv4">职教</string>
    <string name="str_msg201">搜你所需的</string>
    <string name="str_msg202">点击\n登录</string>
    <string name="str_msg203">编辑信息</string>
    <string name="str_msg204">提&#160;交</string>
    <string name="str_msg205">基本信息</string>
    <string name="str_msg206">图片添加</string>
    <string name="str_msg207">标&#160;&#160;&#160;题</string>
    <string name="str_msg208">内&#160;&#160;&#160;&#160;容</string>
    <string name="str_msg209">电&#160;&#160;&#160;&#160;话</string>
    <string name="str_msg210">地&#160;&#160;&#160;&#160;址</string>
    <string name="str_msg211">联系人</string>
    <string name="str_msg212">有效期</string>
    <string name="str_msg213">全部</string>
    <string name="str_msg214">发现新版本要更新吗？</string>
    <string name="str_msg215">类&#160;&#160;&#160;&#160;型</string>
    <string name="str_msg216">联系电话</string>
    <string name="str_msg217">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址</string>
    <string name="str_msg218">发&#160;&#160;布&#160;&#160;人</string>
    <string name="str_msg219">有&#160;&#160;效&#160;&#160;期</string>
    <string name="str_msg220">未搜索到相关信息</string>
    <string name="str_msg221">提交成功，等待审核中</string>
    <string name="str_msg222">温馨提示</string>
    <string name="str_msg223">通过</string>
    <string name="str_msg224">取消</string>
    <string name="str_msg225">驳回</string>
    <string name="str_msg226">提交成功，信息已发布</string>
    <string name="hint1">请输入用户名</string>
    <string name="hint2">请输入密码</string>
    <string name="hint3">请输入确认密码</string>
    <string name="hint4">密码长度不能小于6位</string>
    <string name="hint5">确认密码与设置密码不一致</string>
    <string name="hint6">请选择所属区域</string>
    <string name="hint7">请输入姓名</string>
    <string name="hint8">请输入手机号</string>
    <string name="hint9">手机号格式不正确</string>
    <string name="hint10">用户名或密码不能为空</string>
    <string name="hint11">请输入原密码</string>
    <string name="hint12">请输入新密码</string>
    <string name="hint13">原始密码错误</string>
    <string name="hint14">确认密码与新密码不一致</string>

    <string name="hint15">请输入标题</string>
    <string name="hint16">请输入内容</string>
    <string name="hint17">请输入电话</string>
    <string name="hint18">请输入地址</string>
    <string name="hint19">请输入联系人</string>
    <string name="hint20">请选择有效期</string>
    <string name="hint21">请选择类型</string>
    <string name="hint22">请输入所属乡镇</string>
    <string name="login">登 录</string>
    <string name="reg">注 册</string>
    <string name="find">找回密码</string>
    <string name="logo">甘为农信息</string>
    <string name="str_msg101">完成注册,可发布供求信息</string>
    <string name="str_msg102">发布记录</string>
    <string name="str_msg103">资讯审核</string>
    <string name="str_msg104">密码修改</string>
    <string name="str_msg105">检查新版本</string>
    <string name="str_msg106">当前版本</string>
    <string name="str_msg107">供求审核</string>
    <string name="str_msg108">请输入原密码</string>
    <string name="str_msg109">请输入新密码</string>
    <string name="str_msg110">请确认新密码</string>
    <string name="str_msg111">原&#160;&#160;密&#160;&#160;码</string>
    <string name="str_msg112">新&#160;&#160;密&#160;&#160;码</string>
    <string name="str_msg113">确认密码</string>
    <string name="str_msg114">搜索</string>
    <string name="str_msg115">农林知识</string>
    <string name="str_msg116">用&#160;&#160;户&#160;&#160;名</string>
    <string name="str_msg117">设置密码</string>
    <string name="str_msg118">确认密码</string>
    <string name="str_msg119">所属区域</string>
    <string name="str_msg120">真实姓名</string>
    <string name="str_msg121">手&#160;&#160;机&#160;&#160;号</string>
    <string name="str_msg122">登录</string>
    <string name="str_msg123">注册</string>
    <string name="str_msg124">关闭</string>
    <string name="str_msg125">数字、字母</string>
    <string name="str_msg126">建议长度为6-16位</string>
    <string name="str_msg127">请选择日期</string>
    <string name="str_msg128">确  定</string>
    <string name="str_msg129">操  作</string>
    <string name="str_msg130">内容详情</string>
    <string name="str_msg131">个人信息</string>
    <string name="str_msg132">个人信息修改</string>
    <string name="str_msg133">请允许本应用读写数据</string>
    <string name="str_msg134">免责声明：文章信息来源于用户个人填写，不能保证文章信息的真实性，如对用户造成任何损失，与本平台无关</string>
    <string name="str_msg135">待发布</string>
    <string name="str_msg136">所属乡</string>
    <string name="str_msg137">资讯信息修改</string>
    <string name="str_msg138">资讯发布</string>
    <string name="str_msg139">批处理</string>
    <string name="str_msg140">全选</string>
    <string name="str_msg141">发布</string>
    <string name="str_msg142">置顶</string>

    <string name="str_btn101">退 出</string>
    <string name="str_btn102">确 认</string>
    <string name="str_btn103">取 消</string>
<string name="register_pwd_digits">
      !%^._@$#0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>
    <string name="user_name_digits">
      0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
</resources>
