<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/diy_lightGray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/diy_green">

        <ImageView
            android:id="@id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_msg104"
            android:textColor="@color/diy_white"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diy_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/diy_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_msg111"
            android:textColor="@color/diy_dark"
            android:textSize="@dimen/text" />

        <EditText
            android:id="@id/editText1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/str_msg108"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:digits="@string/register_pwd_digits"
            android:maxLength="16"
            android:textColor="@color/diy_title"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diy_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/diy_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_msg112"
            android:textColor="@color/diy_dark"
            android:textSize="@dimen/text" />

        <EditText
            android:id="@id/editText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:digits="@string/register_pwd_digits"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:hint="@string/str_msg126"
            android:textColor="@color/diy_title"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diy_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/diy_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_msg113"
            android:textColor="@color/diy_dark"
            android:textSize="@dimen/text" />

        <EditText
            android:id="@id/editText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:digits="@string/register_pwd_digits"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:hint="@string/str_msg110"
            android:textColor="@color/diy_title"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/diy_gray" />

    <TextView
        android:id="@id/textview_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margleft"
        android:layout_marginTop="10dp"
        android:textColor="@color/diy_red"
        android:textSize="@dimen/text" />

        <Button
            android:id="@id/btn_confirm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margleft"
            android:layout_marginRight="@dimen/margleft"
            android:background="@drawable/btn_bg"
            android:text="@string/str_btn102"
            android:textColor="@color/diy_white" />

</LinearLayout>
