<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottomLayout"
    android:layout_height="48dp"
    android:layout_alignParentBottom="true"
    android:background="@color/diyMainBg"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@id/tabbar_linear1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/tabbar_iv1"
            android:layout_width="@dimen/bar_image_height"
            android:layout_height="@dimen/bar_image_height"
            android:src="@mipmap/bar_home_focus" />

        <TextView
            android:id="@id/tabbar_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_tv1"
            android:textColor="@color/diyGreenColor"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/tabbar_linear2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/tabbar_iv2"
            android:layout_width="@dimen/bar_image_height"
            android:layout_height="@dimen/bar_image_height"
            android:src="@mipmap/bar_publish" />

        <TextView
            android:id="@id/tabbar_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_tv2"
            android:textColor="@color/diy_bar_grey"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/tabbar_linear3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/tabbar_iv3"
            android:layout_width="@dimen/bar_image_height"
            android:layout_height="@dimen/bar_image_height"
            android:src="@mipmap/bar_mine" />

        <TextView
            android:id="@id/tabbar_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_tv3"
            android:textColor="@color/diy_bar_grey"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@id/tabbar_linear4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/tabbar_iv4"
            android:layout_width="@dimen/bar_image_height"
            android:layout_height="@dimen/bar_image_height"
            android:src="@mipmap/bar_zj" />

        <TextView
            android:id="@id/tabbar_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_tv4"
            android:textColor="@color/diy_bar_grey"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
